modified the home page and worked with the pune page code:0

--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
 
     <section class="about" id="about">
         <!-- <h1 class="hprimary st" id="wel">Welcome to travel Guide</h1> -->
-        <p class="intro pprimary">We will help you to decide which place to visit and when it is the best time to visit
-        </p>
-        <p class="intro pprimary"> With a brief of accommodation, reachablity, time taken to visit a place and avrage
-            budget </p>
-        <p class="intro pprimary">you would know which place to visit in your</p>
-
+        <p class="intro pprimary">We will help you to decide which place to visit and when it is the best time to
+            visit. You would know which place to visit in your
+            With a brief of accommodation, reachablity, time taken to visit a place and avrage
+            budget</p>
     </section>
 
 
@@ -62,10 +60,11 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image ">
                     </div>
                     <h1 class="hsecondary">Mumbai</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <p class="psecondary">MUMBAI (formerly called Bombay) is a densely populated city on India’s west
+                        coast. A financial center, it's India's largest city. On the Mumbai Harbour waterfront stands
+                        the iconic Gateway of India stone arch, built by the British Raj in 1924. Offshore, nearby
+                        Elephanta Island holds ancient cave temples dedicated to the Hindu god Shiva.
+                        PUNE</p>
                 </a>
             </div>
             <div class="name"><a href="#pune">
@@ -73,10 +72,11 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Pune</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <p class="psecondary">Pune also known as poona until 1978 which was the base for peshwas of
+                        Maratha Empire which lasted from 1674 to 1818 boasts several historical
+                        monuments and
+                        museums. There is the Sinhagad Fort, and the famous Shaniwar Wada
+                        are some of the historical and architectural gems worth visiting.</p>
                 </a>
             </div>
             <div class="name"><a href="#nasik">
@@ -84,10 +84,11 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Nasik</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <p class="psecondary">Nashik is an ancient holy city in Maharashtra, a state in western India. It’s
+                        known for its links to the “Ramayana” epic poem. On the Godavari River is Panchavati, a temple
+                        complex. Nearby, Lord Rama was thought to have bathed at Ram Kund water tank, today attended by
+                        Hindu devotees. Shri Kalaram Sansthan Mandir is an ancient shrine to Rama, while Rama and Sita
+                        are said to have worshipped at Sita Gufa caves.</p>
                 </a>
             </div>
             <div class="name"><a href="#ajanta">
@@ -95,10 +96,11 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Ajanta Ellora</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <p class="psecondary">The Ajanta Caves are approximately 30 rock-cut Buddhist cave monuments which
+                        date from the 2nd century BCE to about 480 CE.Ellora is a UNESCO World Heritage Site located in
+                        the Aurangabad district of Maharashtra, India. It is one of the largest rock-cut
+                        monastery-temple cave complexes in the world, featuring Hindu, Buddhist and Jain monuments, and
+                        artwork, dating from the 600–1000 CE period.</p>
                 </a>
             </div>
             <div class="name"><a href="#lonavala">
@@ -106,10 +108,11 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">lonavala</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <p class="psecondary">Lonavala is a hill station surrounded by green valleys in western India. The
+                        Karla Caves and the Bhaja Caves are ancient Buddhist shrines carved out of the rock.
+                        They feature massive pillars and intricate relief sculptures. South of the Bhaja Caves sits the
+                        imposing Lohagad Fort, with its 4 gates. West of here is Bhushi Dam, where water overflows onto
+                        a set of steps during rainy season.</p>
                 </a>
             </div>
 
