changes and add footer in pune code:0

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <li class="header" id="place one "><a href="#pune">Pune</a></li>
             <li class="header" id="place three"><a href="#nasik">Nasik</a></li>
             <li class="header" id="place four"><a href="#ajanta">Ajanta Ellora</a></li>
-            <li class="header" id="place five"><a href="#lonavala">lonavala</a></li>
-            <li class="header" id="feedback"><a href="#footer">feedback</a></li>
+            <li class="header" id="place five"><a href="#lonavala">Lonavala</a></li>
+            <li class="header" id="feedback"><a href="#footer">Feedback</a></li>
         </ul>
     </nav>
 
@@ -42,7 +42,7 @@
         <!-- <h1 class="hprimary st" id="wel">Welcome to travel Guide</h1> -->
         <p class="intro pprimary">We will help you to decide which place to visit and when it is the best time to
             visit. You would know which place to visit in your
-            With a brief of accommodation, reachablity, time taken to visit a place and avrage
+            With a brief of accommodation, reachablity, time taken to visit a place and average
             budget</p>
     </section>
 
@@ -397,11 +397,11 @@
     <section id="footer">
         <div class="footer">
 
-            <P class="npad ptert">For any complaint querry kindy mail to site owners on the mail below.</P>
+            <P class="npad ptert">For any complaint query kindly mail to site owners on the mail below.</P>
             <P class="npad"><a href="mailto:siteowner@examplemail.com">Mail to site owner</a></P>
-            <p class="npad ptert">You can get your article featured on the pages for such querry mail below </p>
+            <p class="npad ptert">You can get your article featured on the pages for such query mail below </p>
             <P class="npad"><a href="mailto:siteowner@examplemail.com">Mail to site article manager</a></P>
-            <p class="pfooter">&copy; Teavel Guide. All rights reserved</p>
+            <p class="pfooter">&copy; Travel Guide. All rights reserved</p>
         </div>
     </section>
 
