--- a/pune/trek_and_gardern.html
+++ b/pune/trek_and_gardern.html
@@ -27,6 +27,25 @@
             <li class="header" id="feedback"><a href="#footer">feedback</a></li>
         </ul>
     </nav>
-    
+   
+</div>
+<footer class="footer" id="footer">
+    <h2 class="r2 nm">Follow us on </h2>
+    <div class="fof">
+        <div class="sm"><a href="https://www.facebook.com/"><img src="./images/logo/facebook.png" alt=""></a>
+        </div>
+        <div class="sm"><a href="https://github.com/avinashkkumar/semfourproject"><img
+                    src="./images/logo/github.png" alt=""></a></div>
+        <div class="sm"><a href="https://www.instagram.com"><img src="./images/logo/instagram.png" alt=""></a>
+        </div>
+        <div class="sm"><a href="https://www.linkedin.com"><img src="./images/logo/linkedin.png" alt=""></a>
+        </div>
+        <div class="sm"><a href="https://www.pinterest.com"><img src="./images/logo/pinterest.png" alt=""></a>
+        </div>
+        <div class="sm"><a href="https://www.youtube.com"><img src="./images/logo/youtube.png" alt=""></a></div>
+        <div class="sm"><a href="https://www.twitter.com"><img src="./images/logo/twitter.png" alt=""></a></div>
+    </div>
+</footer>
+ 
 </body>
 </html>
