few additions in pune code:0

--- a/pune/waterbodies.html
+++ b/pune/waterbodies.html
@@ -28,6 +28,21 @@
         </ul>
     </nav>
     
+    <div class="hotelp" id="hotelp">
+        <h2 class="hotph r24">Hotels in Pune</h2>
+        <p class="hotpnp r1" id="hotpnp1">Pune is a city where anyone can find their hotel according to their budget
+            the range starts from &#8377;800 and goes up to &#8377;11000 so there is a lot of variety to choose
+            from.
+        </p>
+        <ul class="hotpn r1" id="hotpn">
+            <h2 class="tmn bmn"> Popular hotels in Pune</h2>
+            <li><a href="https://www.google.com/travel/hotels/s/yGVwq">Radisson Blu Hotel Pune Kharadi</a></li>
+            <li><a href="https://www.google.com/travel/hotels/s/cjmA7">Novotel Pune Nagar Road</a></li>
+            <li><a href="https://www.google.com/travel/hotels/s/RKGwc">Smart Inn - A Budget Hotel</a></li>
+            <li><a href="https://www.google.com/travel/hotels/s/m3V1j">Hyatt Pune</a></li>
+        </ul>
+       </div>
+
 </div>
 <footer class="footer" id="footer">
     <h2 class="r2 nm">Follow us on </h2>
