--- a/pune/monuments.html
+++ b/pune/monuments.html
@@ -28,6 +28,36 @@
         </ul>
     </nav>
 
+    <div class="pane" id="pane">
+        <h2 class="r3">Shaniwar wada</h2>
+        <div id="img">
+
+          
+        </div>
+        <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Reachability</h3>
+            <p class="r1 bmn">
+                 Pune Airport is at a distance of 12 KM from Shaniwar Wada. It will take around 25 minutes to reach this beautiful palace. At a distance of 3 km from Pune Junction
+                 You can hire a taxi or catch an auto from the airport/station to the fort, which would be the best way to commute on this route.</p>
+        </div>
+        <h4 class="r2 tmn">Shaniwar wada </h4>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15132.476652310475!2d73.85729827894046!3d18.52351644851503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c065144d8edf%3A0x3703b8095866c54b!2sShaniwar%20Wada!5e0!3m2!1sen!2sin!4v1614671700014!5m2!1sen!2sin" 
+            id="map2" class="map">
+        </iframe> 
+        <div class="hotelp" id="hotelp">
+            <h2 class="hotph r24">Hotels in Pune</h2>
+            <p class="hotpnp r1" id="hotpnp1">Pune is a city where anyone can find their hotel according to their budget
+                the range starts from &#8377;800 and goes up to &#8377;11000 so there is a lot of variety to choose
+                from.
+            </p>
+            <ul class="hotpn r1" id="hotpn">
+                <h2 class="tmn bmn"> Popular hotels in Pune</h2>
+                <li><a href="https://www.google.com/travel/hotels/s/yGVwq">Radisson Blu Hotel Pune Kharadi</a></li>
+                <li><a href="https://www.google.com/travel/hotels/s/cjmA7">Novotel Pune Nagar Road</a></li>
+                <li><a href="https://www.google.com/travel/hotels/s/RKGwc">Smart Inn - A Budget Hotel</a></li>
+                <li><a href="https://www.google.com/travel/hotels/s/m3V1j">Hyatt Pune</a></li>
+            </ul>
+        </div>
 
     </div>
     <footer class="footer" id="footer">
