pune done code:0

--- a/pune/trek_and_gardern.html
+++ b/pune/trek_and_gardern.html
@@ -36,11 +36,11 @@
         <div class="reach bmn" id="reach">
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
-                 Sinhagad fort :-The nearest railway station Pune Railway Station, located about 40km from the Fort. 
+                 Sinhagad fort :-Hours:Hours:9am–5:30pm. The nearest railway station Pune Railway Station, located about 40km from the Fort. 
                  Travellers can take cabs to reach the fort, or even opt for government operated buses from Pune station/airport.
                  Your journey from Pune station to Sinhagad will be for an hour and 15 minutes.<br><br>
                 
-                 Pune-Okayama Friendship Garden :- From Pune Railway Station, located about 9km from the Garden. 
+                 Pune-Okayama Friendship Garden :-Hours:6:30–10:30am, 4–8pm. From Pune Railway Station, located about 9km from the Garden. 
                  Travellers can take cabs to reach the Garden, or even opt for government operated buses from Pune station/airport.
                  Your journey from Pune station to Garden will be for an 28 minutes.
              </p>
