--- a/pune/monuments.html
+++ b/pune/monuments.html
@@ -29,7 +29,7 @@
     </nav>
 
     <div class="pane" id="pane">
-        <h2 class="r3">Shaniwar wada</h2>
+        <h2 class="r3">Shaniwar wada & Aga Khan Palace</h2>
         <div id="img">
 
           
@@ -37,13 +37,25 @@
         <div class="reach bmn" id="reach">
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
+                 Shaniwar wada :-Hours:9:30am–5pm Sunday closed.
                  Pune Airport is at a distance of 12 KM from Shaniwar Wada. It will take around 25 minutes to reach this beautiful palace. At a distance of 3 km from Pune Junction
-                 You can hire a taxi or catch an auto from the airport/station to the fort, which would be the best way to commute on this route.</p>
-        </div>
+                 You can hire a taxi or catch an auto from the airport/station to the fort, which would be the best way to commute on this route.<br><br>
+                 Aga Khan Palace :-Hours:9am–5:30pm.
+                 Pune Railway Station, located about 6-7km from the Palace.
+                 Located at Nagar Road, you can reach here by taking an auto, cab or state buses.
+                 Your journey from Pune station to Aga Khan Palace will be for an 21 min.</p>
+
+                </div>
         <h4 class="r2 tmn">Shaniwar wada </h4>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15132.476652310475!2d73.85729827894046!3d18.52351644851503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c065144d8edf%3A0x3703b8095866c54b!2sShaniwar%20Wada!5e0!3m2!1sen!2sin!4v1614671700014!5m2!1sen!2sin" 
             id="map2" class="map">
         </iframe> 
+
+        <h4 class="r2 tmn">Aga Khan Palace </h4>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.477611700188!2d73.89926761472117!3d18.552494187390383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c11768711b1b%3A0xac1ba97447d569f4!2sAga%20Khan%20Palace!5e0!3m2!1sen!2sin!4v1614686153633!5m2!1sen!2sin" 
+           id="map2" class="map">
+        </iframe> 
+
         <div class="hotelp" id="hotelp">
             <h2 class="hotph r24">Hotels in Pune</h2>
             <p class="hotpnp r1" id="hotpnp1">Pune is a city where anyone can find their hotel according to their budget
