--- a/pune/monuments.html
+++ b/pune/monuments.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "icon" href ="../images/page genral contents/region-code.png" type = "image/x-icon" background-color="white";>
+    <link rel="icon" href="../images/page genral contents/region-code.png" type="image/x-icon" background-color="white"
+        ;>
     <title>Pune | Monuments </title>
     <link rel="stylesheet" href="css/mountains.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- navigation bar content -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
@@ -29,21 +32,40 @@
     </nav>
 
     <div class="pane" id="pane">
+        <div class="otherplaces">
+            <ul class="pn">
+                <li class="other r1" id="other1"><a href="./biological_park.html">Biological Park</a></li>
+                <li class="other r1 present" id="other1"><a href="./monuments.html">Monuments</a></li>
+                <li class="other r1" id="other2"><a href="./trek_and_gardern.html">Trek and Garderns</a></li>
+                <li class="other r1" id="other3"><a href="./waterbodies.html">Waterbodies</a></li>
+            </ul>
+        </div>
         <h2 class="r3">Shaniwar wada</h2>
         <div id="img">
-
-          
         </div>
         <div class="reach bmn" id="reach">
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
-                 Pune Airport is at a distance of 12 KM from Shaniwar Wada. It will take around 25 minutes to reach this beautiful palace. At a distance of 3 km from Pune Junction
-                 You can hire a taxi or catch an auto from the airport/station to the fort, which would be the best way to commute on this route.</p>
+                Pune Airport is at a distance of 12 KM from Shaniwar Wada. It will take around 25 minutes to reach this
+                beautiful palace. At a distance of 3 km from Pune Junction
+                You can hire a taxi or catch an auto from the airport/station to the fort, which would be the best way
+                to commute on this route.</p>
+            <table class="itble class r1">
+                <tr>
+                    <td class="r1">Avrage visiting time</td>
+                    <td class="r1">3 Hours</td>
+                </tr>
+                <tr>
+                    <td class="r1">Ticket</td>
+                    <td class="r1">&#8377; 50 </td>
+                </tr>
+            </table>
         </div>
         <h4 class="r2 tmn">Shaniwar wada </h4>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15132.476652310475!2d73.85729827894046!3d18.52351644851503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c065144d8edf%3A0x3703b8095866c54b!2sShaniwar%20Wada!5e0!3m2!1sen!2sin!4v1614671700014!5m2!1sen!2sin" 
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15132.476652310475!2d73.85729827894046!3d18.52351644851503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c065144d8edf%3A0x3703b8095866c54b!2sShaniwar%20Wada!5e0!3m2!1sen!2sin!4v1614671700014!5m2!1sen!2sin"
             id="map2" class="map">
-        </iframe> 
+        </iframe>
         <div class="hotelp" id="hotelp">
             <h2 class="hotph r24">Hotels in Pune</h2>
             <p class="hotpnp r1" id="hotpnp1">Pune is a city where anyone can find their hotel according to their budget
@@ -77,6 +99,7 @@
             <div class="sm"><a href="https://www.twitter.com"><img src="./images/logo/twitter.png" alt=""></a></div>
         </div>
     </footer>
-    
+
 </body>
+
 </html>
