--- a/nasik/trek.html
+++ b/nasik/trek.html
@@ -27,6 +27,51 @@
             <li class="header" id="feedback"><a href="#footer">feedback</a></li>
         </ul>
     </nav>
+    <div class="pane" id="pane">
+        <div class="otherplaces">
+            <ul class="pn">
+                <li class="other r1" id="other1"><a href="./monuments.html">Monuments</a></li>
+                <li class="other r1" id="other1"><a href="./religious_place.html">Religious places</a></li>
+                <li class="other r1 present" id="other2"><a href="./trek.html">Trek</a></li>
+                <li class="other r1" id="other3"><a href="./waterfall.html">Waterfall</a></li>
+            </ul>
+        </div>
+   
+   
+        <div class="hotelp" id="hotelp">
+        <h2 class="hotph r24">Hotels in Nashik</h2>
+        <p class="hotpnp r1" id="hotpnp1">Nashik is a city where anyone can find their hotel according to their budget
+            the range starts from &#8377;1500 and goes up to &#8377;11000 so there is a lot of variety to choose
+            from.
+        </p>
+        <ul class="hotpn r1" id="hotpn">
+            <h2 class="tmn bmn"> Popular hotels in Nashik</h2>
+            <li><a href="https://www.google.com/travel/hotels/s/invyk">The Gateway Hotel Ambad Nashik</a></li>
+            <li><a href="https://www.google.com/travel/hotels/s/B4jSc">ibis Nashik</a></li>
+            <li><a href="https://www.google.com/travel/hotels/s/7S1jY">Hotel Grand Rio Nashik</a></li>
+            <li><a href="https://www.google.com/travel/hotels/s/gLjP3">Courtyard by Marriott Nashik </a></li>
+        </ul>
+    </div>
     
+</div>
+
+<footer class="footer" id="footer">
+    <h2 class="r2 nm">Follow us on </h2>
+    <div class="fof">
+        <div class="sm"><a href="https://www.facebook.com/"><img src="./images/logo/facebook.png" alt=""></a>
+        </div>
+        <div class="sm"><a href="https://github.com/avinashkkumar/semfourproject"><img
+                    src="./images/logo/github.png" alt=""></a></div>
+        <div class="sm"><a href="https://www.instagram.com"><img src="./images/logo/instagram.png" alt=""></a>
+        </div>
+        <div class="sm"><a href="https://www.linkedin.com"><img src="./images/logo/linkedin.png" alt=""></a>
+        </div>
+        <div class="sm"><a href="https://www.pinterest.com"><img src="./images/logo/pinterest.png" alt=""></a>
+        </div>
+        <div class="sm"><a href="https://www.youtube.com"><img src="./images/logo/youtube.png" alt=""></a></div>
+        <div class="sm"><a href="https://www.twitter.com"><img src="./images/logo/twitter.png" alt=""></a></div>
+    </div>
+</footer>
+
 </body>
 </html>
