done with nashik code:0

--- a/nasik/waterfall.html
+++ b/nasik/waterfall.html
@@ -37,6 +37,53 @@
             </ul>
         </div>
    
+        <h2 class="r3">Dugarwadi Waterfall</h2>
+        <div id="img">
+          
+        </div>
+        <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Reachability</h3>
+            <p class="r1 bmn">
+                To reach the Dugarwadi falls, visitors need to drive up to Sapgon on NH-848, which is about 4 km from Trimbakeshwar. From Sapgon the waterfall parking area is 4 km. After reaching the place, one has to park the vehicles near the road and a walk of 1-2 km is required to reach at the exact place of waterfall. 
+                It is recommended to make group visit at Dugarwadi, because there is no security available and it is also a lonely place </p><br>
+            <table class="itble class r1">
+                <tr>
+                    <td class="r1">Travel time</td>
+                    <td class="r1">2-3hrs</td>
+                </tr>
+                <tr>
+                    <td class="r1">Ticket</td>
+                    <td class="r1">&#8377; 0 </td>
+                </tr>
+            </table>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3750.612761533856!2d73.46612301491467!3d19.94071668659777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bddf55921a96453%3A0xcfec1778eab8178f!2sDugarwadi%20Waterfall!5e0!3m2!1sen!2sin!4v1615101052024!5m2!1sen!2sin" 
+          id="map2" class="map">
+        </iframe>
+   
+        <h2 class="r3">Someshwar Waterfalls</h2>
+        <div id="img">
+          
+        </div>
+        <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Reachability</h3>
+            <p class="r1 bmn">
+                At a distance of 2 km from Someshwar Temple and 9 km from Nashik Central Bus Station, 
+                Someshwar Waterfalls is a breathtaking waterfalls situated near Gangapur on the suburbs of Nashik.</p><br>
+            <table class="itble class r1">
+                <tr>
+                    <td class="r1">Visiting time</td>
+                    <td class="r1">6 AM to 6 PM</td>
+                </tr>
+                <tr>
+                    <td class="r1">Ticket</td>
+                    <td class="r1">&#8377; 0 </td>
+                </tr>
+            </table>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3748.5078241689635!2d73.72122621491619!3d20.029161186548198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bddec1682978165%3A0x75e5dfd33a421265!2sSomeshwar%20Water%20Fall!5e0!3m2!1sen!2sin!4v1615101346095!5m2!1sen!2sin" 
+          id="map2" class="map">
+        </iframe>
    
         <div class="hotelp" id="hotelp">
         <h2 class="hotph r24">Hotels in Nashik</h2>
