--- a/nasik/trek.html
+++ b/nasik/trek.html
@@ -36,7 +36,56 @@
                 <li class="other r1" id="other3"><a href="./waterfall.html">Waterfall</a></li>
             </ul>
         </div>
+        <h2 class="r3">Harihar Fort</h2>
+        <div id="img">
+          
+        </div>
+        <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Reachability</h3>
+            <p class="r1 bmn">
+                By Air: The nearest airport to Harihar Fort is located in Mumbai at a distance of about 165 km. From the airport, you can get a direct cab to Harihar Fort. <br>
+                By Rail: Nashik is the nearest railhead from Harihar Fort. ...  <br>
+                By Road: As Harihar Fort is located atop a hill, it cannot be accessed by road. </p><br>
+            <table class="itble class r1">
+                <tr>
+                    <td class="r1">Visiting time</td>
+                    <td class="r1">7am–6pm</td>
+                </tr>
+                <tr>
+                    <td class="r1">Ticket</td>
+                    <td class="r1">&#8377; 100 </td>
+                </tr>
+            </table>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3751.4667864780818!2d73.4697492149141!3d19.90472508661792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdd8aa165defa41%3A0xbd233aa44468637e!2sHarihar%20Fort!5e0!3m2!1sen!2sin!4v1615099817187!5m2!1sen!2sin" 
+          id="map2" class="map">
+        </iframe>
    
+        <h2 class="r3">Brahmagiri</h2>
+        <div id="img">
+          
+        </div>
+        <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Reachability</h3>
+            <p class="r1 bmn">
+                A 10 minutes' walk from Trimbakeshwar towards Brahmagiri brings visitors to a signboard that indicates the presence of wild animals and warning regarding the same. 
+                Then, the gradual ascent of 2 km brings you to the top of Brahmagiri Hill. 
+                It takes around 2 hours to reach the top of the Brahmagiri from Trimbakeshwar.
+            </p><br>
+            <table class="itble class r1">
+                <tr>
+                    <td class="r1">Visiting time</td>
+                    <td class="r1"> 6 AM to 6 PM</td>
+                </tr>
+                <tr>
+                    <td class="r1">Ticket</td>
+                    <td class="r1">&#8377; 0 </td>
+                </tr>
+            </table>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31228.88081131191!2d75.97654297086757!3d11.932199558786467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba5c45397435647%3A0xdd557fad9d7a71a7!2sBrahmagiri!5e0!3m2!1sen!2sin!4v1615100258868!5m2!1sen!2sin" 
+          id="map2" class="map">
+        </iframe>
    
         <div class="hotelp" id="hotelp">
         <h2 class="hotph r24">Hotels in Nashik</h2>
