pune complete -slider-left code:0

--- a/pune/monuments.html
+++ b/pune/monuments.html
@@ -44,8 +44,8 @@
         <div id="img">
         </div>
         <div class="reach bmn" id="reach">
-            <h3 class="r24 bmn">Reachability</h3>
-            <p class="r1 bmn">
+            <h3 class="r24">Reachability</h3>
+            <p class="r1 bmn tmn">
                 Pune Airport is at a distance of 12 KM from Shaniwar Wada. It will take around 25 minutes to reach this
                 beautiful palace. At a distance of 3 km from Pune Junction
                 You can hire a taxi or catch an auto from the airport/station to the fort, which would be the best way
@@ -70,8 +70,8 @@
         <h4 class="r3">Aga Khan Palace </h4>
         <div id="img">
         </div>
-        <div class="reach bmn" id="reach">
-            <h3 class="r24 bmn">Reachability</h3>
+        <div class="reach" id="reach">
+            <h3 class="r24 bmn tmn">Reachability</h3>
             <p class="r1 bmn">
                 Pune Airport is at a distance of 12 KM from Shaniwar Wada. It will take around 25 minutes to reach this
                 beautiful palace. At a distance of 3 km from Pune Junction
