--- a/pune/waterbodies.html
+++ b/pune/waterbodies.html
@@ -32,12 +32,20 @@
     </nav>
 
     <div class="pane" id="pane">
+        <div class="otherplaces">
+            <ul class="pn">
+                <li class="other r1" id="other1"><a href="./biological_park.html">Biological Park</a></li>
+                <li class="other r1" id="other1"><a href="./monuments.html">Monuments</a></li>
+                <li class="other r1" id="other2"><a href="./trek_and_gardern.html">Trek and Garderns</a></li>
+                <li class="other r1 present" id="other3"><a href="./waterbodies.html">Waterbodies</a></li>
+            </ul>
+        </div>
         <h2 class="r3">Khadakwasla & Pashan Lake</h2>
         <div id="img">
 
         </div>
 
-        <h4 class="r2">Khadakwasla </h4>
+        <h4 class="r2 bmn">Khadakwasla </h4>
         <div class="reach" id="reach">
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 tmn">
@@ -45,6 +53,16 @@
                 Travellers can take cabs to reach the fort, or even opt for buses from Pune station/airport.
                 Your journey from Pune station to Khadakwasla will be for an hour.
             </p>
+            <table class="itble class r1">
+                <tr>
+                    <td class="r1">Avrage visiting time</td>
+                    <td class="r1">3 Hours</td>
+                </tr>
+                <tr>
+                    <td class="r1">Ticket</td>
+                    <td class="r1">&#8377; 50 </td>
+                </tr>
+            </table>
         </div>
 
         <iframe
@@ -52,7 +70,7 @@
             id="map2" class="map">
         </iframe>
 
-        <h4 class="r2">Pashan Lake </h4>
+        <h4 class="r2 bmn">Pashan Lake </h4>
         <div class="reach" id="reach">
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 tmn">
@@ -61,6 +79,16 @@
                 station/airport.
                 Your journey from Pune station to Lake will be for an 40 minutes.
             </p>
+            <table class="itble class r1">
+                <tr>
+                    <td class="r1">Avrage visiting time</td>
+                    <td class="r1">3 Hours</td>
+                </tr>
+                <tr>
+                    <td class="r1">Ticket</td>
+                    <td class="r1">&#8377; 50 </td>
+                </tr>
+            </table>
         </div>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7565.82641331235!2d73.78023327399451!3d18.532823899607212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2befadc9c087b%3A0x19a6ecd1a140986c!2sPashan%20Lake!5e0!3m2!1sen!2sin!4v1614685189045!5m2!1sen!2sin"
