--- a/ajanta_ellora/ellora_caves.html
+++ b/ajanta_ellora/ellora_caves.html
@@ -27,6 +27,50 @@
             <li class="header" id="feedback"><a href="#footer">feedback</a></li>
         </ul>
     </nav>
+    <div class="pane" id="pane">
+        <div class="otherplaces">
+            <ul class="pn">
+                <li class="other r1" id="other1"><a href="./ajanta_caves.html">Ajanta Caves</a></li>
+                <li class="other r1" id="other1"><a href="./daulatabad_fort.html">Daulatabad Fort</a></li>
+                <li class="other r1 present" id="other2"><a href="./ellora_caves.html">Ellora Caves</a></li>
+                <li class="other r1" id="other3"><a href="./goga_baba_hill.html">Goga Baba Hills</a></li>
+            </ul>
+        </div>
     
+        <div class="hotelp" id="hotelp">
+            <h2 class="hotph r24">Hotels near Ajanta & Ellora </h2>
+            <p class="hotpnp r1" id="hotpnp1">Ajanta & Ellora caves are some tourist places where anyone can find their hotel according to their budget
+                the range starts from &#8377;1500 and goes up to &#8377;11000 so there is a lot of variety to choose
+                from.
+            </p>
+            <ul class="hotpn r1" id="hotpn">
+                <h2 class="tmn bmn"> Popular hotels near Ajanta & Ellora</h2>
+                <li><a href="https://www.google.com/travel/hotels/s/rVHpi">MTDC Guest House - Ajanta T Junction</a></li>
+                <li><a href="https://www.google.com/travel/hotels/s/jUbkt">Hotel New Tirupati Lodging & Restaurant</a></li>
+                <li><a href="https://www.google.com/travel/hotels/s/ap1SG">Hotel Kailas</a></li>
+                <li><a href="https://www.google.com/travel/hotels/s/hsM6w">Ellora Heritage Resort</a></li>
+            </ul>
+        </div>
+        
+    </div>
+ 
+    <footer class="footer" id="footer">
+        <h2 class="r2 nm">Follow us on </h2>
+        <div class="fof">
+            <div class="sm"><a href="https://www.facebook.com/"><img src="./images/logo/facebook.png" alt=""></a>
+            </div>
+            <div class="sm"><a href="https://github.com/avinashkkumar/semfourproject"><img
+                        src="./images/logo/github.png" alt=""></a></div>
+            <div class="sm"><a href="https://www.instagram.com"><img src="./images/logo/instagram.png" alt=""></a>
+            </div>
+            <div class="sm"><a href="https://www.linkedin.com"><img src="./images/logo/linkedin.png" alt=""></a>
+            </div>
+            <div class="sm"><a href="https://www.pinterest.com"><img src="./images/logo/pinterest.png" alt=""></a>
+            </div>
+            <div class="sm"><a href="https://www.youtube.com"><img src="./images/logo/youtube.png" alt=""></a></div>
+            <div class="sm"><a href="https://www.twitter.com"><img src="./images/logo/twitter.png" alt=""></a></div>
+        </div>
+    </footer>
+ 
 </body>
 </html>
