modified places added contact code:0

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li class="header" id="place three"><a href="#nasik">Nasik</a></li>
             <li class="header" id="place four"><a href="#ajanta">Ajanta Ellora</a></li>
             <li class="header" id="place five"><a href="#lonavala">Lonavala</a></li>
-            <li class="header" id="feedback"><a href="#footer">Feedback</a></li>
+            <li class="header" id="feedback"><a href="./contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
@@ -132,9 +132,10 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image ">
                 </div>
                 <h1 class="hsecondary">Beaches</h1>
-                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
-                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                <ul class="mumbeach" id="mumbeach">
+                    <li>Juhu Beach</li>
+                    <li>Marine Drive</li>
+                </ul>
                 </a>
             </div>
             <div class="mname">
@@ -142,9 +143,10 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                 </div>
                 <h1 class="hsecondary">Caves</h1>
-                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
-                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                <ul class="mumcave" id="mumcave">
+                    <li>Elephanta Caves</li>
+                    <li>Marine Drive</li>
+                </ul>
                 </a>
             </div>
             <div class="mname">
@@ -152,9 +154,10 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                 </div>
                 <h1 class="hsecondary">Monuments</h1>
-                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
-                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                <ul class="mummonument" id="mummonument">
+                    <li>Gateway of India</li>
+                    <li>Chhatrapati Shivaji Maharaj Terminus</li>
+                </ul>
                 </a>
             </div>
             <div class="mname">
@@ -162,9 +165,10 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                 </div>
                 <h1 class="hsecondary">Zoo and Garderns</h1>
-                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
-                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                <ul class="mumzoo" id="mumzoo">
+                    <li>Veer Mata Jijabai Bhosale Udyan And Zoo</li>
+                    <li>Hanging Gardens</li>
+                </ul>
                 </a>
             </div>
         </div>
@@ -182,10 +186,10 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image ">
                     </div>
                     <h1 class="hsecondary">Biological park</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <ul class="punbiological" id="punbiological">
+                        <li>Katraj Snake Park</li>
+                        <li>Rajiv Gandhi Zoological Park</li>
+                    </ul>
                 </a>
             </div>
             <div class="pnname"><a href="pune/monuments.html">
@@ -193,10 +197,10 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Monuments</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <ul class="punmonument" id="punmonument">
+                        <li>Shaniwar wada</li>
+                        <li>Aga Khan Place</li>
+                    </ul>
                 </a>
             </div>
             <div class="pnname"><a href="pune/trek_and_gardern.html">
@@ -204,10 +208,10 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Trek and Garderns</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <ul class="puntrek" id="puntrek">
+                        <li>Sinhagad Fort</li>
+                        <li>Pune-okayama Friendship Garden</li>
+                    </ul>
                 </a>
             </div>
             <div class="pnname"><a href="pune/waterbodies.html">
@@ -215,10 +219,10 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Waterbodies</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <ul class="punwater" id="punwater">
+                        <li>Khadakwasla Dam</li>
+                        <li>Pashan Lake</li>
+                    </ul>
                 </a>
             </div>
         </div>
@@ -239,10 +243,10 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image ">
                     </div>
                     <h1 class="hsecondary">Monuments</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <ul class="nkmonument" id="nkmonument">
+                        <li>Pandav Leni</li>
+                        <li></li>
+                    </ul>
                 </a>
             </div>
             <div class="nkname"><a href="nasik/religious_place.html">
@@ -250,10 +254,11 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Religious Places </h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <ul class="nkrp" id="nkrp">
+                        <li>Saptashrungi</li>
+                        <li>Sri Kalaram Mandir</li>
+                        <li>Trimbakeshwar Shiva Temple</li>
+                    </ul>
                 </a>
             </div>
             <div class="nkname"><a href="nasik/trek.html">
@@ -261,10 +266,11 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">trek</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <ul class="nktrek" id="nktrek">
+                        <li>Harihar Fort</li>
+                        <li>Brahmagiri</li>
+                        <li>Sula Vineyards</li>
+                    </ul>
                 </a>
             </div>
             <div class="nkname"><a href="nasik/waterfall.html">
@@ -272,10 +278,10 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Waterfall</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <ul class="nkwater" id="nkwater">
+                        <li>Dugarwadi Waterfall</li>
+                        <li>Someshwar Waterfalls</li>
+                    </ul>
                 </a>
             </div>
         </div>
@@ -293,10 +299,6 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image ">
                     </div>
                     <h1 class="hsecondary">Ajanta Caves</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
             <div class="aename"><a href="ajanta_ellora/ellora_caves.html">
@@ -304,10 +306,6 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Ellora Caves</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
             <div class="aename"><a href="ajanta_ellora/daulatabad_fort.html">
@@ -315,10 +313,6 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Daulatabad fort</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
             <div class="aename"><a href="ajanta_ellora/goga_baba_hill.html">
@@ -326,10 +320,6 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Goga baba hill </h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
         </div>
@@ -348,10 +338,10 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image ">
                     </div>
                     <h1 class="hsecondary">Caves</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <ul class="lcave" id="lcave">
+                        <li>Karla Buddha Caves</li>
+                        <li>Bhaja Buddhist Caves</li>
+                    </ul>
                 </a>
             </div>
             <div class="laname"><a href="lonavala/monumnts.html">
@@ -359,10 +349,10 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Monuments</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <ul class="lmonument" id="lmonument">
+                        <ul></ul>
+                        <ul></ul>
+                    </ul>
                 </a>
             </div>
             <div class="laname"><a href="lonavala/trek_point.html">
@@ -370,10 +360,6 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Trek Points</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
             <div class="laname"><a href="lonavala/waterbodies.html">
@@ -381,10 +367,6 @@
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
                     <h1 class="hsecondary">Waterbodies</h1>
-                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
-                        doloremque
-                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
         </div>
@@ -394,16 +376,23 @@
     <!-- footer spot  -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
 
-    <section id="footer">
-        <div class="footer">
-
-            <P class="npad ptert">For any complaint query kindly mail to site owners on the mail below.</P>
-            <P class="npad"><a href="mailto:siteowner@examplemail.com">Mail to site owner</a></P>
-            <p class="npad ptert">You can get your article featured on the pages for such query mail below </p>
-            <P class="npad"><a href="mailto:siteowner@examplemail.com">Mail to site article manager</a></P>
-            <p class="pfooter">&copy; Travel Guide. All rights reserved</p>
+    <footer class="footer" id="footer">
+        <h2 class="r2 nm">Follow us on </h2>
+        <div class="fof">
+            <div class="sm"><a href="https://www.facebook.com/"><img src="./images/logo/facebook.png" alt=""></a>
+            </div>
+            <div class="sm"><a href="https://github.com/avinashkkumar/semfourproject"><img
+                        src="./images/logo/github.png" alt=""></a></div>
+            <div class="sm"><a href="https://www.instagram.com"><img src="./images/logo/instagram.png" alt=""></a>
+            </div>
+            <div class="sm"><a href="https://www.linkedin.com"><img src="./images/logo/linkedin.png" alt=""></a>
+            </div>
+            <div class="sm"><a href="https://www.pinterest.com"><img src="./images/logo/pinterest.png" alt=""></a>
+            </div>
+            <div class="sm"><a href="https://www.youtube.com"><img src="./images/logo/youtube.png" alt=""></a></div>
+            <div class="sm"><a href="https://www.twitter.com"><img src="./images/logo/twitter.png" alt=""></a></div>
         </div>
-    </section>
+    </footer>
 
 
 
