--- a/mumbai/caves.html
+++ b/mumbai/caves.html
@@ -24,7 +24,7 @@
             <li class="header" id="place three"><a href="../index.html#nasik">Nasik</a></li>
             <li class="header" id="place four"><a href="../index.html#ajanta">Ajanta Ellora</a></li>
             <li class="header" id="place five"><a href="../index.html#lonavala">lonavala</a></li>
-            <li class="header" id="feedback"><a href="#footer">feedback</a></li>
+            <li class="header" id="feedback"><a href="../contact.html">Contact Us</a></li>
         </ul>
     </nav>
     <div class="pane" id="pane">
