added contact page code:0

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,35 @@
     </nav>
     <div class="contact" id="contact">
         <h1>Contact us.</h1>
+        <div class="panes" id="panes">
+            <div class="review" id="review">
+                <section class="pane1" id="pane1">
+                    <img src="./images/logo/chat.png" alt="" class="image">
+                    <h2>Review</h2>
+                </section>
+                <p>
+                    Write a review to make the service better on <a
+                        href="mailto:toaddress@email.com">toreviewaddress@email.com</a>
+                </p>
+            </div>
+            <div class="changes" id="changes">
+                <section class="pane2" id="pane2">
+                    <img src="./images/logo/exchange.png" alt="" class="image">
+                    <h2>Request changes</h2>
+                </section>
+                <p>If you find any conflicting information on any part of page kindly let us know at <a
+                        href="mailto:toaddress@email.com">toaddress@mail.com</a></p>
+            </div>
+            <div class="link" id="link">
+                <section class="pane3" id="pane3">
+                    <img src="./images/logo/blogger-logotype.png" alt="" class="image">
+                    <h2>Link your blog</h2>
+                </section>
+                <p>Share your experience, if you write blogs get it featured from us at <a
+                        href="mailto:toaddress@email.com">toaddress@mail.com</a></p>
+            </div>
+        </div>
+
     </div>
 </body>
 
